# a2v

./: .gitignore  README.md  main.py  pyproject.toml
audio_to_video/: __init__.py  audio.py  cli.py  lyrics.py  renderers.py  transcription.py
scripts/: quick-preview.sh
skills/audio-to-video/: SKILL.md
